--- a/index.html
+++ b/index.html
@@ -24,21 +24,29 @@
     <script src="playerGenerator.js"></script>
     <script>
         // Array to store team data
-        const teams = Array.from({ length: 30 }, (_, i) => ({ id: 'team_' + i, name: 'Team ' + (i + 1), players: [] }));
+        let teams = [];
+
+        // Array of team names corresponding to the team data
+        const teamNames = [
+            "Thunderhawks", "Avalanche", "Renegades", "Titans", "Hurricanes",
+            "Wildcats", "Dragons", "Mavericks", "Guardians", "Storm",
+            "Blazers", "Wolverines", "Cyclones", "Patriots", "Bandits",
+            "Lightning", "Heatwave", "Scorpions", "Hawks", "Sharks",
+            "Tigers", "Falcons", "Bears", "Lions", "Wolves",
+            "Panthers", "Rebels", "Raiders", "Spartans", "Eagles"
+        ];
 
         // Function to generate teams and assign players to them
         function generateTeams() {
-            teams.forEach(team => {
-                const shuffledPlayerIds = Object.keys(localStorage).filter(key => key.startsWith('player_')).sort(() => 0.5 - Math.random()); // Shuffle player IDs
-                let playerIndex = 0;
-                for (let i = 0; i < 12; i++) {
-                    if (playerIndex < shuffledPlayerIds.length) {
-                        const playerId = shuffledPlayerIds[playerIndex];
-                        const player = JSON.parse(localStorage.getItem(playerId));
-                        if (player) {
-                            team.players.push(player);
-                            playerIndex++;
-                        }
+            teams = Array.from({ length: teamNames.length }, (_, i) => ({ id: i+1, name: teamNames[i], players: [] }));
+
+            teams.forEach((team, index) => {
+                const startIndex = index * 12; // Calculate the starting index for players of this team
+                for (let i = startIndex; i < startIndex + 12; i++) {
+                    const playerId = 'player_' + i;
+                    const player = JSON.parse(localStorage.getItem(playerId));
+                    if (player && player.teamId === team.id) {
+                        team.players.push(player);
                     }
                 }
             });
@@ -55,7 +63,7 @@
                 teamDiv.innerHTML = `
                     <h2>${team.name}</h2>
                     <div class="players">
-                        ${team.players.map(player => `<p class="player" onclick="viewPlayer('${player.id}')">${player.name} - ${player.position}</p>`).join('')}
+                        ${team.players.map(player => `<p class="player" onclick="viewPlayer('${player.id}')">${player.name} - ${player.position} Overall: ${player.overall} ID: #${player.id.split('_')[1]}</p>`).join('')}
                     </div>
                 `;
                 teamsContainer.appendChild(teamDiv);
